...
                    android:layout_height="145dp"
                    android:scaleType="fitCenter"
                    android:onClick="checked"

                    android:adjustViewBounds="false"
                    android:text="State Income Tax Bracket"/>
<!--                    android:button="@drawable/tax_bracket" /> -->

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="111dp"
                    android:layout_height="145dp"
                    android:adjustViewBounds="false"
...
